[package]
name = "inquire-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = { version = "0.2.1", default-features = false, features = ["termion", "date", "editor", "chrono"] }
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
yaml-rust = "0.4"
linked-hash-map="0.5.4"

[lib]
name="inq"
path="src/lib.rs"
crate-type=["dylib"]